--- a/frontend/src/assets/css/sb-admin-2.css
+++ b/frontend/src/assets/css/sb-admin-2.css
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 abbr[title],
@@ -1719,7 +1719,7 @@ pre code {
   border: 0;
 }
 
-.form-control:focus {
+.form-control:not(.bg-light):focus {
   color: #6e707e;
   background-color: #fff;
   border-color: #bac8f3;
@@ -2382,8 +2382,8 @@ fieldset:disabled a.btn {
 
 .btn-Standard:hover, .btn-warning:hover {
   color: #fff;
-  background-color: #FBB91D;
-  border-color: #e6b916;
+  background-color: #ecc32b;
+  border-color: #ecc32b;
 }
 
 .btn-Standard:focus, .btn-Standard.focus,
@@ -2403,7 +2403,7 @@ fieldset:disabled a.btn {
 .btn-warning:not(:disabled):not(.disabled):active, .btn-warning:not(:disabled):not(.disabled).active,
 .show > .btn-warning.dropdown-toggle {
   color: #fff;
-  background-color: #e6b916;
+  background-color: #ecc32b;
   border-color: #e9aa0b;
 }
 
@@ -2417,7 +2417,7 @@ fieldset:disabled a.btn {
 .btn-Standard.dropdown-active,
 .btn-warning-active {
   color: #fff;
-  background-color: #e6b916;
+  background-color: #ecc32b;
   border-color: #e9aa0b;
   box-shadow: 0 0 0 0.2rem rgba(255, 195, 18, 0.49);
 }
@@ -2451,7 +2451,7 @@ fieldset:disabled a.btn {
 .btn-orange:not(:disabled):not(.disabled):active, .btn-orange:not(:disabled):not(.disabled).active,
 .show > .btn-orange.dropdown-toggle {
   color: #fff;
-  background-color: #e6b916;
+  background-color: #ecc32b;
   border-color: #e9aa0b;
 }
 
@@ -3628,7 +3628,6 @@ button.dropdown-toggle::after {
 
 .custom-select {
   display: inline-block;
-  width: 100%;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   font-size: 1rem;
@@ -4836,7 +4835,7 @@ a.badge-info:focus, a.badge-info.focus {
 
 a.badge-warning:hover, a.badge-warning:focus {
   color: #fff;
-  background-color: #e6b916;
+  background-color: #ecc32b;
 }
 
 a.badge-warning:focus, a.badge-warning.focus {
@@ -6301,7 +6300,7 @@ button.bg-info:focus {
 a.bg-warning:hover, a.bg-warning:focus,
 button.bg-warning:hover,
 button.bg-warning:focus {
-  background-color: #e6b916 !important;
+  background-color: #ecc32b !important;
 }
 
 .bg-Immediate, .bg-danger {
@@ -7591,8 +7590,7 @@ button.bg-dark:focus {
 
 .mr-4,
 .mx-4 {
-  margin-right: 1.5rem;
-  width: -webkit-fill-available;
+  margin-right: 1.5rem !important;
 }
 
 .mb-4,
