--- a/frontend/src/assets/css/sb-admin-2.css
+++ b/frontend/src/assets/css/sb-admin-2.css
@@ -2149,7 +2149,8 @@ textarea.form-control {
   .form-inline label {
     display: flex;
     align-items: center;
-    justify-content: center;
+    font-weight: 700;
+    color: #0061f2;
     margin-bottom: 0;
   }
   .form-inline .form-group {
@@ -3626,6 +3627,7 @@ button.dropdown-toggle::after {
   background-color: rgba(78, 115, 223, 0.5);
 }
 
+.VueTables__limit-field > select,
 .custom-select {
   display: inline-block;
   height: calc(1.5em + 0.75rem + 2px);
@@ -3635,7 +3637,7 @@ button.dropdown-toggle::after {
   line-height: 1.5;
   color: #6e707e;
   vertical-align: middle;
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%235a5c69' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px;
+  background: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2212%22%20height%3D%2212%22%20viewBox%3D%220%200%2012%2012%22%3E%3Ctitle%3Edown-arrow%3C%2Ftitle%3E%3Cg%20fill%3D%22%23000000%22%3E%3Cpath%20d%3D%22M10.293%2C3.293%2C6%2C7.586%2C1.707%2C3.293A1%2C1%2C0%2C0%2C0%2C.293%2C4.707l5%2C5a1%2C1%2C0%2C0%2C0%2C1.414%2C0l5-5a1%2C1%2C0%2C1%2C0-1.414-1.414Z%22%20fill%3D%22%23000000%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fsvg%3E") no-repeat right 0.75rem center/8px 10px;
   background-color: #fff;
   border: 1px solid #d1d3e2;
   border-radius: 0.35rem;
@@ -4163,6 +4165,18 @@ button.dropdown-toggle::after {
   }
   .navbar-expand-md .navbar-toggler {
     display: none;
+  }
+  .search-results {
+    position: absolute;
+    left: 24px;
+    background-color: white;
+    z-index: 10000;
+    overflow-y: auto;
+    max-height: 25em;
+    border-radius: 0px 0px 6px 6px;
+    border-left: 1px solid #eff0f5;
+    border-right: 1px solid #eff0f5;
+    border-bottom: 1px solid #eff0f5;
   }
 }
 
@@ -10296,11 +10310,7 @@ a:focus {
 .sidebar .sidebar-brand {
   height: 4.375rem;
   text-decoration: none;
-  font-size: 1rem;
-  font-weight: 800;
   padding: 1.5rem 1rem;
-  text-align: center;
-  text-transform: uppercase;
   letter-spacing: 0.05rem;
   z-index: 1;
 }
