Small changes as well as implementing pinning of incidents.

--- a/frontend/src/assets/css/temp.css
+++ b/frontend/src/assets/css/temp.css
@@ -1238,3 +1238,8 @@ div .marker {
 .full-length {
   width: 100%;
 }
+
+.VueTables__child-row-toggler:hover,
+.far.fa-bookmark:hover {
+  color: black;
+}
