Add endpoint to allow to get assigned tasks from an incident.

--- a/frontend/src/assets/css/sb-admin-2.css
+++ b/frontend/src/assets/css/sb-admin-2.css
@@ -5254,3 +5254,9 @@ div .marker {
   line-height: 1.5;
   border-radius: .2rem;
 }
+
+.fa-underline,
+.fa-comment {
+  position: relative;
+  top: 1px;
+}
