--- a/frontend/src/assets/css/sb-admin-2.css
+++ b/frontend/src/assets/css/sb-admin-2.css
@@ -5271,3 +5271,38 @@ div .marker {
   position: relative;
   bottom: 3px;
 }
+
+.pagination {
+  display: inline-block;
+  padding-left: 0;
+  margin: 20px 0;
+  border-radius: 4px;
+}
+.pagination > li {
+  display: inline;
+}
+
+.pagination > li > a,
+.pagination > li > span {
+  position: relative;
+  float: left;
+  padding: 6px 12px;
+  margin-left: -1px;
+  line-height: 1.42857143;
+  color: #0061f2;
+  text-decoration: none;
+  background-color: #fff;
+  border: 1px solid #ddd;
+}
+
+.pagination > li.active > a,
+.pagination > li.active > span {
+  color: #fff !important;
+  background-color: #0061f2 !important;
+}
+
+.pagination > li.disabled > a,
+.pagination > li.disabled > span {
+  color: #858796 !important;
+  cursor: not-allowed;
+}
