Added notifications, user settings and forgotten password.

--- a/backend/app/templates/password_reset.html
+++ b/backend/app/templates/password_reset.html
@@ -33,23 +33,22 @@
                             <div style="color: #555555; font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 1.2; padding: 20px 38px 15px 38px;">
                                 <div style="line-height: 1.2; font-size: 12px; font-family: Helvetica Neue, Helvetica, Arial, sans-serif; color: #555555; mso-line-height-alt: 14px;">
                                     <p style="font-size: 42px; line-height: 1.2; word-break: break-word; text-align: center; font-family: inherit; mso-line-height-alt: 50px; margin: 0;">
-                                        <span style="font-size: 42px; color: #2a272b;"><strong>A supervisor has invited you to create an account for DGVOST.<br/></strong></span>
+                                        <span style="font-size: 42px; color: #2a272b;"><strong>Hi, {{ name }}. You have requested a password reset.<br/></strong></span>
                                     </p>
                                 </div>
                             </div>
                             <div style="color: #555555; font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 1.5; padding: 10px 38px 25px 38px;">
                                 <div style="font-size: 14px; line-height: 1.5; color: #555555; font-family: Helvetica Neue, Helvetica, Arial, sans-serif; mso-line-height-alt: 21px;">
                                     <p style="font-size: 14px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 21px; margin: 0;">
-                                        Click the button below to create an account. If you believe this email
-                                        was not intended for you then please ignore.</p>
+                                        Click the button below to reset your password.</p>
                                 </div>
                             </div>
                             <br/>
-                            <a href="https://{{ config['DOMAIN_NAME'] }}/complete-registration/{{ email_link }}">
+                            <a href="https://{{ config['DOMAIN_NAME'] }}/password-reset/{{ email_link }}">
                                 <div class="button-container" style="padding: 0px;" align="center">
                                     <div style="text-decoration: none; display: inline-block; color: #ffffff; background-color: #004afd; border-radius: 60px; -webkit-border-radius: 60px; -moz-border-radius: 60px; width: auto; ;border-top: 1px solid #004afd; border-right: 1px solid #004afd; border-bottom: 1px solid #004afd; border-left: 1px solid #004afd; padding-top: 12px; padding-bottom: 16px; font-family: Helvetica Neue, Helvetica, Arial, sans-serif; text-align: center; mso-border-alt: none; word-break: keep-all;">
                                                 <span style="padding-left: 32px; padding-right: 32px; font-size: 16px; display: inline-block;"><span
-                                                        style="font-size: 16px; margin: 0; line-height: 2; word-break: break-word; mso-line-height-alt: 32px;"><strong>DGVOST Registration</strong></span></span>
+                                                        style="font-size: 16px; margin: 0; line-height: 2; word-break: break-word; mso-line-height-alt: 32px;"><strong>DGVOST Password Reset</strong></span></span>
                                     </div>
                                 </div>
                             </a>
