--- a/frontend/src/assets/css/sb-admin-2.css
+++ b/frontend/src/assets/css/sb-admin-2.css
@@ -526,13 +526,21 @@ pre code {
   -webkit-box-flex: 0
 }
 
+.col-sm-3 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 25%;
+  flex: 0 0 25%;
+  max-width: 25%
+}
+
+.col-lg-9 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 75%;
+  flex: 0 0 75%;
+  max-width: 75%
+}
+
 @media (min-width:576px) {
-  .col-sm-3 {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 25%;
-    flex: 0 0 25%;
-    max-width: 25%
-  }
   .col-sm-8 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 66.66667%;
@@ -574,12 +582,6 @@ pre code {
     -ms-flex: 0 0 58.33333%;
     flex: 0 0 58.33333%;
     max-width: 58.33333%
-  }
-  .col-lg-9 {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 75%;
-    flex: 0 0 75%;
-    max-width: 75%
   }
   .col-lg-10 {
     -webkit-box-flex: 0;
@@ -5349,4 +5351,15 @@ div .marker {
   left: 0;
   top: 0;
   opacity: 0;
+}
+
+#reset-task-name {
+  position: relative;
+  z-index: 1;
+  top: -33px;
+  color: #7B7B7B;
+  cursor: pointer;
+  width: 0;
+  float: right;
+  left: -22px;
 }
